# mygist

./: .gitignore  README.md  color_cropper.py  color_picker.py  colors.py  iris.py  plot.py  setup.cfg  superhero.py  test.py
mygist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
